# CrowellChatNativeApp

./: .gitignore  CMakeLists.txt  CrowellChatQtClient.qdocconf  LICENSE  README.md
include/src/app/: main.h
include/src/app/models/: chat_message.h  chatter.h  chatter_identity.h  cognomen.h  contact_information.h  conversation.h  email_address.h  login_request.h  phone_number.h  praenomen.h
include/src/app/models/impl/: chat_message_impl.h  chatter_identity_impl.h  chatter_impl.h  cognomen_impl.h  contact_information_impl.h  conversation_impl.h  email_address_impl.h  login_request_impl.h  phone_number_impl.h  praenomen_impl.h
include/test/ui/pages/HelloWorld/: HelloWorld.h
resource/collections/: ui.qrc
src/app/: main.cpp
src/app/models/: chat_message.cpp  cognomen.cpp  login_request.cpp
src/app/models/impl/: chat_message_impl.cpp  chatter_identity_impl.cpp  chatter_impl.cpp  cognomen_impl.cpp  contact_information_impl.cpp  conversation_impl.cpp  email_address_impl.cpp  login_request_impl.cpp  phone_number_impl.cpp  praenomen_impl.cpp
test/: CMakeLists.txt
test/ui/pages/HelloWorld/: CMakeLists.txt
test/ui/pages/HelloWorld/qml/: tst_HelloWorld.qml
test/ui/pages/HelloWorld/src/: HelloWorld.cpp
ui/: CMakeLists.txt
ui/components/: ConversationList.qml  CrowellChatTheme.qml  Footer.qml  Header.qml  LoginForm.qml
ui/pages/: HelloWorld.qml  HomePage.qml  LoginPage.qml
ui/windows/: main.qml
util/: utilities.cmake
