cmake_minimum_required(VERSION 3.23)

project(CrowellChatQtClient_tests VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include(${CMAKE_SOURCE_DIR}/util/utilities.cmake)

GET_FILES(${PROJECT_NAME}_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src *.cpp)
list(APPEND ${PROJECT_NAME}_DEFINITIONS QUICK_TEST_SOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}/qml" QT_QML_DEBUG)

ADD_QT_MODULES(${PROJECT_NAME} Core Test Quick QuickTest)

CONFIGURE_QT(${PROJECT_NAME})
list(APPEND ${PROJECT_NAME}_INCLUDE_DIRS "${CMAKE_SOURCE_DIR}/include")

qt_add_executable(${PROJECT_NAME})
target_sources(${PROJECT_NAME} PRIVATE ${${PROJECT_NAME}_SOURCES})
target_include_directories(${PROJECT_NAME} PRIVATE ${${PROJECT_NAME}_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} PRIVATE ${${PROJECT_NAME}_LIBS})
target_compile_definitions(${PROJECT_NAME} PRIVATE ${${PROJECT_NAME}_DEFINITIONS})

add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
